<?xml version="1.0" encoding="utf-8"?>
<!--
  3-tab bottom nav matching the Lernix layout: HOME / HISTORY / SETTINGS.
  Each item id MUST match a fragment id in nav_graph.xml so that
  NavigationUI auto-binds tab taps to navigation actions.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"     android:icon="@drawable/ic_home"     android:title="@string/nav_home"/>
    <item android:id="@+id/historyFragment"  android:icon="@drawable/ic_history"  android:title="@string/nav_history"/>
    <item android:id="@+id/settingsFragment" android:icon="@drawable/ic_settings" android:title="@string/nav_settings"/>
</menu>
